@@ -9,7 +9,8 @@ Event Observer API, to listen to events:
     - events are: warnings, payloads/responses, ...
     - useful for customized logging, observability and instrumentation;
     - see `astrapy.event_observers` module and docstring of classes therein for more.
-mainteinance: enabled text-index integration tests on Astra
+maintenance: introduce `LEGACY_INSERTMANY_BEHAVIOUR_PRE2193` flag to control related tests
+maintenance: enabled text-index integration tests on Astra
 maintenance: introduced the publish-and-release workflow machinery
 maintenance: split development/maintenance from user README
 maintenance. Improvement in testing machinery:
